# trafic-signal-reinforcement-learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
comparison/: HUONG_DAN_CHAY.md  compare_results.py  run_baseline.py
comparison/comparison_du10/baseline_results/: baseline_queue_data.txt  baseline_results.json  baseline_wait_data.txt
comparison/comparison_du100/baseline_results1/: baseline_queue_data.txt  baseline_results.json  baseline_reward_data.txt  baseline_wait_data.txt
intersection/: episode_routes.rou.xml
intersection_grid/: grid_2x2.net.xml  grid_2x2.sumocfg  grid_2x2_routes.rou.xml
model/: plot_delay_data.txt  plot_queue_data.txt  plot_reward_data.txt  trained_model.pt
notebook/: improvements.ipynb  target_network_comparison.ipynb  train.ipynb
settings/: grid_training_settings.yaml  testing_settings.yaml  training_settings.yaml
src/: constants.py  episode.py  grid_train.py  settings.py  test.py  train.py
src/agent/: __init__.py  agent.py  memory.py  model.py
src/environment/: __init__.py  core.py  generator.py  reward.py  state.py
src/grid/: __init__.py  config.py  coordinator.py  grid_env.py  grid_episode.py  network_gen.py  parallel_worker.py  reward.py  route_gen.py  state.py
src/policy/: __init__.py  epsilon_greedy.py
