[project]
name = "tlcs"
version = "0.1.0"
description = "Deep Q-Learning agent controlling a single intersection in SUMO."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrea Vidali", email = "andreavidali.me@gmail.com" }]
requires-python = ">=3.13,<3.14"

dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "torch>=2.9.0",
    "traci>=1.24.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pdbpp>=0.11.7",
    "ruff>=0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
tlcs = "cli:app"

[tool.ruff]
line-length = 100
target-version = "py313"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "G004",   # logging-f-string
    "T201",   # print
    "DTZ005", # call-datetime-now-without-tzinfo
    "S311",   # suspicious-non-cryptographic-random-usage
    "FBT001", # boolean-type-hint-positional-argument
    "D104",   # undocumented-public-package
    "D100",   # undocumented-public-module
    "ISC001", # single-line-implicit-string-concatenation
    "COM812", # missing-trailing-comma
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["environment", "agent", "policy"]

[tool.mypy]
python_version = "3.13"
disable_error_code = ["import-untyped"]
